; ModuleID = '/home/carl/AnghaBench/linux/drivers/thermal/broadcom/extr_bcm2835_thermal.c_bcm2835_thermal_temp2adc.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/thermal/broadcom/extr_bcm2835_thermal.c_bcm2835_thermal_temp2adc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BCM2835_TS_TSENSSTAT_DATA_BITS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @bcm2835_thermal_temp2adc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm2835_thermal_temp2adc(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = sub nsw i32 %8, %7
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %4, align 4
  %12 = sdiv i32 %11, %10
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %16

16:                                               ; preds = %15, %3
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @BCM2835_TS_TSENSSTAT_DATA_BITS, align 4
  %19 = call i32 @BIT(i32 %18)
  %20 = icmp sge i32 %17, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32, i32* @BCM2835_TS_TSENSSTAT_DATA_BITS, align 4
  %23 = call i32 @BIT(i32 %22)
  %24 = sub nsw i32 %23, 1
  store i32 %24, i32* %4, align 4
  br label %25

25:                                               ; preds = %21, %16
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
